--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -19,3 +19,9 @@ header.header-unpinned {
         height: 108px;
     }
 }
+
+@media (max-width: 767px) {
+    header .navbar-brand img {
+	height: auto;
+    }
+}
