Refactor content of homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -95,75 +95,70 @@
 </section>
 {{end}}
 
-{{with .Params.features}}
-{{if .enable}}
+{{with .Site.GetPage "services"}}
 <section class="section features overflow-hidden" id="services">
   <div class="container">
     <div class="row">
       <div class="col-lg-12" data-aos="fade-up">
         <div class="section-title text-center">
-          <p class="text-uppercase">{{.subtitle | markdownify}}</p>
-          <h2 class="title">{{.title | markdownify}}</h2>
-          <p>{{.description | markdownify}}</p>
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
         </div>
       </div>
     </div>
 
-    {{with .features_blocks}}
     <div class="row">
       <div class="col-lg-12" data-aos="fade-left" data-aos-delay="200">
         <div class="features-carousel swiper-container">
           <div class="swiper-wrapper align-items-center">
-            {{range .}}
+            {{range .Resources}}
             <div class="swiper-slide">
               <div class="features-card">
                 <div class="icon text-primary">
-                  <i class="{{.icon}}"></i>
+                  <i class="{{.Params.icon}}"></i>
                 </div>
-                <h3 class="title">{{.title | markdownify}}</h3>
-                <p class="mb-0">{{.content | markdownify}}</p>
+                <h3 class="title">{{.Params.title | markdownify}}</h3>
+                <p class="mb-0">{{.Content | markdownify}}</p>
               </div>
             </div>
-            {{end}}
+	    {{end}}
           </div>
 
           <div class="swiper-pagination"></div>
         </div>
       </div>
     </div>
-    {{end}}
   </div>
 </section>
 {{end}}
-{{end}}
 
-{{with .Params.our_team}}
-{{if .enable}}
+{{with .Site.GetPage "team"}}
 <section class="section" id="team">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="section-title text-center" data-aos="fade-in">
-          <p class="text-uppercase">{{.subtitle | markdownify}}</p>
-          <h2 class="title">{{.title | markdownify}}</h2>
-          <p>{{.description | markdownify}}</p>
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
         </div>
       </div>
     </div>
     <div class="row justify-content-around">
-      {{range .team}}
+      {{range sort .Resources "Params.weight"}}
       <div class="col-lg-3 col-md-4 col-6">
         <div class="team-item text-center">
           <div class="team-image">
-            {{ if fileExists (add `assets/` .image) }}
-            {{$img:= resources.Get .image }}
+            {{ if fileExists (add `assets/` .Params.image) }}
+            {{$img:= resources.Get .Params.image }}
             {{$img:= $img.Resize "175x "}}
             {{$imgWebp:= $img.Resize "175x webp"}}
             <img loading="lazy" decoding="async" class="w-100 img-fluid rounded-circle" width="{{$img.Width}}" height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="Team Image" onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'">
             {{end}}
           </div>
-          <h3>{{.name | markdownify}}</h3>
-          <p>{{.designation | markdownify}}</p>
+          <h3>{{.Params.name | markdownify}}</h3>
+          <p>{{.Params.designation | markdownify}}</p>
         </div>
       </div>
       {{end}}
@@ -171,21 +166,28 @@
   </div>
 </section>
 {{end}}
-{{end}}
 
-{{with .Params.brands_carousel}}
-{{if .enable}}
-<section class="overflow-hidden">
+{{with .Site.GetPage "partners"}}
+<section class="section" id="partners">
   <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title text-center" data-aos="fade-in">
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-12" data-aos="fade-left">
         <div class="brand-carousel swiper-container">
           <div class="swiper-wrapper">
-            {{range .brand_images}}
-            {{ if fileExists (add `assets/` .) }}
+            {{range .Resources}}
+            {{if fileExists (add `assets/` .Params.image)}}
             <div class="swiper-slide">
               <div class="brand-item">
-                {{$img:= resources.Get . }}
+                {{$img:= resources.Get .Params.image}}
                 {{$img_width := $img.Width }}
 
                 {{$img_orginal := add (add (string $img_width) "x") " " }}
@@ -193,7 +195,9 @@
 
                 {{$imgWebp := add (add (string $img_width) "x") " webp" }}
                 {{$imgWebp_src := ($img.Resize $imgWebp).RelPermalink }}
+		<a href="{{.Params.external_url}}" target="_blank">
                 <img loading="lazy" decoding="async" class="img-fluid" width="{{$img_width}}" height="{{$img.Height}}" src="{{$imgWebp_src}}" alt="Brand Image" onerror="this.onerror=null;this.src='{{$img_src}}'">
+		</a>
               </div>
             </div>
             {{end}}
@@ -204,7 +208,6 @@
     </div>
   </div>
 </section>
-{{end}}
 {{end}}
 
 <section class="section" id="contact">
