--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -85,7 +85,7 @@
         
                 <div class="navbar-right">
                   {{ if site.Params.navigation_button.enable }}
-                  <a href="{{ site.Params.navigation_button.link | relURL }}" class="btn btn-primary">{{ site.Params.navigation_button.label }}</a>
+                  <a href="{{ site.Params.navigation_button.link | relURL }}" class="btn btn-primary" target="_blank">{{ site.Params.navigation_button.label }}</a>
                   {{ end }}
                 </div>
               </div>
