--- a/layouts/index.html
+++ b/layouts/index.html
@@ -111,7 +111,7 @@
     <div class="row">
       <div class="col-lg-12" data-aos="fade-left" data-aos-delay="200">
         <div class="features-carousel swiper-container">
-          <div class="swiper-wrapper align-items-center">
+          <div class="swiper-wrapper">
             {{range .Resources}}
             <div class="swiper-slide">
               <div class="features-card">
