--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -14,6 +14,10 @@ header.header-unpinned {
     height: 108px;
 }
 
+.banner .block {
+    padding: 60px 180px 40px;
+}
+
 h1 em {
    color: $primary-color; 
    font-style: unset;
@@ -24,9 +28,23 @@ h1 em {
 		2px -2px 1px $white, 2px -1px 1px $white, 2px 0px 1px $white, 2px 1px 1px $white, 2px 2px 1px $white;
 }
 
+.features .swiper-slide {
+    height: unset;
+}
+
+.features .features-card {
+    height: calc(100% - 25px);
+}
+
 .icon i {
     font-size: 50px;
     line-height: 70px;
+}
+
+@media (max-width: 1466px) {
+    .banner .block {
+        padding: 60px 30px 40px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -38,5 +56,11 @@ h1 em {
 @media (max-width: 767px) {
     header .navbar-brand img {
 	height: auto;
+    }
+}
+
+@media (max-width: 575px) {
+    .banner .block {
+        padding: 60px 15px 40px;
     }
 }
