--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,7 +61,7 @@
         <div class="block row justify-content-center no-gutters" data-aos="fade-up">
           <div class="col-lg-10 px-0 px-xl-4" data-rellax-speed="-3">
             <h1 class="mb-4" data-aos="fade-up">{{.title | markdownify}}</h1>
-	    <!--<a href="{{.button_link}}" class="btn btn-primary" data-aos="fade-up" data-aos-delay="200">{{.button}}</a>-->
+            <!--<a href="{{.button_link}}" class="btn btn-primary" data-aos="fade-up" data-aos-delay="200">{{.button}}</a>-->
           </div>
         </div>
 
@@ -71,7 +71,8 @@
             <div class="col-lg-10">
               {{$img:= resources.Get . }}
               {{$img:= $img.Resize "1020x webp"}}
-              <img loading="lazy" decoding="async" class="w-100 img-fluid" width="{{$img.Width}}" height="{{$img.Height}}" src="{{$img.RelPermalink}}" alt="Banner Image">
+              <img loading="lazy" decoding="async" class="w-100 img-fluid" width="{{$img.Width}}"
+                height="{{$img.Height}}" src="{{$img.RelPermalink}}" alt="Banner Image">
             </div>
           </div>
         </div>
@@ -122,7 +123,7 @@
                 <p class="mb-0">{{.Content | markdownify}}</p>
               </div>
             </div>
-	    {{end}}
+            {{end}}
           </div>
 
           <div class="swiper-pagination"></div>
@@ -154,7 +155,45 @@
             {{$img:= resources.Get .Params.image }}
             {{$img:= $img.Resize "175x "}}
             {{$imgWebp:= $img.Resize "175x webp"}}
-            <img loading="lazy" decoding="async" class="w-100 img-fluid rounded-circle" width="{{$img.Width}}" height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="Team Image" onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'">
+            <img loading="lazy" decoding="async" class="w-100 img-fluid rounded-circle" width="{{$img.Width}}"
+              height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="Team Image"
+              onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'">
+            {{end}}
+          </div>
+          <h3>{{.Params.name | markdownify}}</h3>
+          <p>{{.Params.designation | markdownify}}</p>
+        </div>
+      </div>
+      {{end}}
+    </div>
+  </div>
+</section>
+{{end}}
+
+{{with .Site.GetPage "we_worked_together"}}
+<section class="section" id="team">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title text-center" data-aos="fade-in">
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-around">
+      {{range sort .Resources "Params.weight"}}
+      <div class="col-lg-3 col-md-4 col-6">
+        <div class="team-item text-center">
+          <div class="team-image">
+            {{ if fileExists (add `assets/` .Params.image) }}
+            {{$img:= resources.Get .Params.image }}
+            {{$img:= $img.Resize "175x "}}
+            {{$imgWebp:= $img.Resize "175x webp"}}
+            <img loading="lazy" decoding="async" class="w-100 img-fluid rounded-circle" width="{{$img.Width}}"
+              height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="Team Image"
+              onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'">
             {{end}}
           </div>
           <h3>{{.Params.name | markdownify}}</h3>
@@ -195,9 +234,10 @@
 
                 {{$imgWebp := add (add (string $img_width) "x") " webp" }}
                 {{$imgWebp_src := ($img.Resize $imgWebp).RelPermalink }}
-		<a href="{{.Params.external_url}}" target="_blank">
-                <img loading="lazy" decoding="async" class="img-fluid" width="{{$img_width}}" height="{{$img.Height}}" src="{{$imgWebp_src}}" alt="Brand Image" onerror="this.onerror=null;this.src='{{$img_src}}'">
-		</a>
+                <a href="{{.Params.external_url}}" target="_blank">
+                  <img loading="lazy" decoding="async" class="img-fluid" width="{{$img_width}}" height="{{$img.Height}}"
+                    src="{{$imgWebp_src}}" alt="Brand Image" onerror="this.onerror=null;this.src='{{$img_src}}'">
+                </a>
               </div>
             </div>
             {{end}}
@@ -226,11 +266,11 @@
           <ul class="social-links list-inline">
             {{ range .}}
             <li class="list-inline-item"><a href="{{.link}}" title="{{.title}}" target="_blank">
-              <i class="{{.icon}}"></i>
-            </a></li>
+                <i class="{{.icon}}"></i>
+              </a></li>
             {{end}}
           </ul>
-          {{end}}  
+          {{end}}
         </div>
       </div>
 
@@ -283,11 +323,13 @@
             <p id="form-status" class="form-status"></p>
             <div class="form-group">
               <label for="name">Full Name</label>
-              <input class="form-control shadow-none" id="name" name="full_name" type="text" placeholder="Full Name" required>
+              <input class="form-control shadow-none" id="name" name="full_name" type="text" placeholder="Full Name"
+                required>
             </div>
             <div class="form-group">
               <label for="email">Email Address</label>
-              <input class="form-control shadow-none" id="email" name="email" type="email" placeholder="Email Address" required>
+              <input class="form-control shadow-none" id="email" name="email" type="email" placeholder="Email Address"
+                required>
             </div>
             <div class="form-group">
               <label for="message">Your Message</label>
