--- a/layouts/index.html
+++ b/layouts/index.html
@@ -170,7 +170,7 @@
 </section>
 {{end}}
 
-{{with .Site.GetPage "we_worked_together"}}
+{{with .Site.GetPage "advisors"}}
 <section class="section" id="team">
   <div class="container">
     <div class="row">
@@ -219,32 +219,122 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12" data-aos="fade-left">
+      <div class="col-md-12 text-center" data-aos="fade-in">
         <div class="brand-carousel swiper-container">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper align-items-center">
             {{range .Resources}}
             {{if fileExists (add `assets/` .Params.image)}}
-            <div class="swiper-slide">
+            <div class="swiper-slide" disableOnInteraction="false">
               <div class="brand-item">
                 {{$img:= resources.Get .Params.image}}
                 {{$img_width := $img.Width }}
+                
+                {{$box_width := "400"}}
+                {{$box_height := "200"}}
+                {{$box_aspect := add (add (string $box_width) "x") (string $box_height)}}
 
-                {{$img_orginal := add (add (string $img_width) "x") " " }}
-                {{$img_src := ($img.Resize $img_orginal).RelPermalink }}
+                {{$img_src := ($img.Fit $box_aspect).RelPermalink }}
 
-                {{$imgWebp := add (add (string $img_width) "x") " webp" }}
-                {{$imgWebp_src := ($img.Resize $imgWebp).RelPermalink }}
+                {{$imgWebp_src := ($img.Fit $box_aspect).RelPermalink }}
+                
                 <a href="{{.Params.external_url}}" target="_blank">
-                  <img loading="lazy" decoding="async" class="img-fluid" width="{{$img_width}}" height="{{$img.Height}}"
+                  <img loading="lazy" decoding="async" class="img-fluid" height="{{$box_height}}"
                     src="{{$imgWebp_src}}" alt="Brand Image" onerror="this.onerror=null;this.src='{{$img_src}}'">
                 </a>
               </div>
             </div>
             {{end}}
             {{end}}
+            
+            
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+{{end}}
+
+{{with .Site.GetPage "support"}}
+<section class="section" id="support">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title text-center" data-aos="fade-in">
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center" data-aos="fade-in">
+        <div class="brand-carousel swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            {{range .Resources}}
+            {{if fileExists (add `assets/` .Params.image)}}
+            <div class="swiper-slide" disableOnInteraction="false">
+              <div class="brand-item">
+                {{$img:= resources.Get .Params.image}}
+                {{$img_width := $img.Width }}
+                
+                {{$box_width := "400"}}
+                {{$box_height := "200"}}
+                {{$box_aspect := add (add (string $box_width) "x") (string $box_height)}}
+
+                {{$img_src := ($img.Fit $box_aspect).RelPermalink }}
+
+                {{$imgWebp_src := ($img.Fit $box_aspect).RelPermalink }}
+                
+                <a href="{{.Params.external_url}}" target="_blank">
+                  <img loading="lazy" decoding="async" class="img-fluid" height="{{$box_height}}"
+                    src="{{$imgWebp_src}}" alt="Brand Image" onerror="this.onerror=null;this.src='{{$img_src}}'">
+                </a>
+              </div>
+            </div>
+            {{end}}
+            {{end}}
+            
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+{{end}}
+
+{{with .Site.GetPage "we_worked_together"}}
+<section class="section" id="team">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title text-center" data-aos="fade-in">
+          <p class="text-uppercase">{{.Params.subtitle | markdownify}}</p>
+          <h2 class="title">{{.Params.title | markdownify}}</h2>
+          <p>{{.Params.description | markdownify}}</p>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-around">
+      {{range sort .Resources "Params.weight"}}
+      <div class="col-lg-2 col-md-3 col-3">
+        <div class="team-item text-center">
+          <div class="team-image">
+            {{ if fileExists (add `assets/` .Params.image) }}
+            {{$img:= resources.Get .Params.image }}
+            {{$img:= $img.Resize "175x "}}
+            {{$imgWebp:= $img.Resize "175x webp"}}
+            <img loading="lazy" decoding="async" class="w-100 img-fluid rounded-circle" width="{{$img.Width}}"
+              height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="Team Image"
+              onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'">
+            {{end}}
+          </div>
+          <h4>{{.Params.name | markdownify}}</h4>
+          <p>{{.Params.designation | markdownify}}</p>
+        </div>
+      </div>
+      {{end}}
     </div>
   </div>
 </section>
