--- a/layouts/index.html
+++ b/layouts/index.html
@@ -171,7 +171,7 @@
 {{end}}
 
 {{with .Site.GetPage "advisors"}}
-<section class="section" id="team">
+<section class="section" id="advisors">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -206,8 +206,8 @@
 </section>
 {{end}}
 
-{{with .Site.GetPage "partners"}}
-<section class="section" id="partners">
+{{with .Site.GetPage "customers"}}
+<section class="section" id="customers">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -305,7 +305,7 @@
 {{end}}
 
 {{with .Site.GetPage "we_worked_together"}}
-<section class="section" id="team">
+<section class="section" id="we_worked_together">
   <div class="container">
     <div class="row">
       <div class="col-12">
