Added link to the title of portfolio card.

--- a/layouts/portfolio/card.html
+++ b/layouts/portfolio/card.html
@@ -1,6 +1,6 @@
 <article class="card blog-card">
   <div class="card-body">
-    <h3 class="card-title"><a title="{{ .Title }}">{{ .Title }}</a>
+    <h3 class="card-title"><a title="{{ .Title }}" href="{{ .Params.article_url }}" >{{ .Title }} </a>
     </h3>
     <p>{{ .Params.subtitle }} </p>
   </div>
